--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -51,6 +51,20 @@
     transition: background-color 0.2s;
 }
 
-.countdownButton:hover{
+.countdownButton:not(:disabled):hover{
     background: var(--blue-dark);
+}
+
+.countdownButtonActive{
+    background: var(--white);
+    color: var(--title);
+}
+.countdownButtonActive:not(:disabled):hover{
+    background-color: var(--red);
+    color: var(--white);
+}
+.countdownButton:disabled{
+    background: var(--white);
+    color: var(--title);
+    cursor: not-allowed;
 }
