add local storage and ending some details in frontend

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,14 +10,18 @@
 
 :root{
   --white:#fff;
-  --background: #F2F3F5;
+  --box-color: #666666;
+  --background: #343841;
   --gray-line: #DCDDE0;
-  --text: #666666;
-  --text-highlight: #B3B9FF;
-  --title: #2E384D;
+  --text: #b1afaf;
+  --text-modal: #666666;
+  --text-highlight: #717174;
+  --title: #F2F3F5;
+  --title-modal: #2E384D;
   --red: #E83F5B;
   --green: #4CD62B;
-  --blue: #5965E0;
+  --blue: #bbbbbb;
+  --blue-text: #5965E0;
   --blue-dark: #4953B8;
   --blue-twitter: #2AA9E0;
 }
