--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,11 +10,14 @@
     --background: #F2F3F5;
     --gray-line: #DCDDE0;
     --text: #666666;
+    --text-modal: #666666;
     --text-highlight: #B3B9FF;
     --title: #2E384D;
+    --title-modal: #2E384D;
     --red: #E83F5B;
     --green: #4CD62B;
     --blue: #5965E0;
+    --blue-text: #5965E0;
     --blue-dark: #4953B8;
     --blue-twitter: #2AA9E0;
 }
